﻿[h1]v0.5.7.6[/h1]
See [url=https://discord.com/channels/860671977449979914/864921239957012481]#magic-storage-changelog[/url] for more information.

- Fixed a bug which caused biomes near certain pylons to be mistakenly considered as "nearby" when using the Basic or Advanced Portable Remote Storage Access items