@@ -1,4 +1,6 @@
-﻿[h1]v0.5.7.6[/h1]
+﻿[h1]v0.5.7.7[/h1]
 See [url=https://discord.com/channels/860671977449979914/864921239957012481]#magic-storage-changelog[/url] for more information.
 
-- Fixed a bug which caused biomes near certain pylons to be mistakenly considered as "nearby" when using the Basic or Advanced Portable Remote Storage Access items
+- Fixed a bug which caused the Crafting Access to not properly recognize crafting stations in its station slots
+- Fixed a bug which caused items from Environment Simulator modules to not be consumed when crafting in the Crafting Access
+- Various other bug fixes which improved the logic for crafting in the Crafting Access 
